--- a/write_an_erc_20_smart_contract/substrate-node-template/runtime/Cargo.toml
+++ b/write_an_erc_20_smart_contract/substrate-node-template/runtime/Cargo.toml
@@ -42,6 +42,9 @@ pallet-sudo = { default-features = false, version = '2.0.0' }
 pallet-timestamp = { default-features = false, version = '2.0.0' }
 pallet-transaction-payment = { default-features = false, version = '2.0.0' }
 pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
+pallet-contracts = { default_features = false, version = '2.0.0' }
+pallet-contracts-primitives = { default_features= false, version = '2.0.0' }
+pallet-contracts-rpc-runtime-api = { version = '0.8.0', default-features = false }
 sp-api = { default-features = false, version = '2.0.0' }
 sp-block-builder = { default-features = false, version = '2.0.0' }
 sp-consensus-aura = { default-features = false, version = '0.8.0' }
@@ -64,7 +67,7 @@ runtime-benchmarks = [
     'frame-system/runtime-benchmarks',
     'pallet-balances/runtime-benchmarks',
     'pallet-timestamp/runtime-benchmarks',
-    'sp-runtime/runtime-benchmarks',
+   'sp-runtime/runtime-benchmarks',
 ]
 std = [
     'codec/std',
@@ -82,6 +85,9 @@ std = [
     'pallet-timestamp/std',
     'pallet-transaction-payment/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
+    'pallet-contracts/std',
+    'pallet-contracts-primitives/std',
+    'pallet-contracts-rpc-runtime-api/std',
     'sp-api/std',
     'sp-block-builder/std',
     'sp-consensus-aura/std',
